EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==4/11/2009==
Trevius: SoF - Stopped the bogus "Deleting Item" messages from being sent to SoF Clients

==4/10/2009==
Derision: Tradeskill recipes involving weapons as an ingredient should no longer dupe the weapon.
Derision: Expendable items with charges are now deleted when the last charge is used.
Derision: Tradeskill skillups now based on unmodified skill level.
Derision: (realityincarnate): Prevent bard skillups for instruments they aren't trained in.
Derision: (realityincarnate): Implemented SE_Hunger (e.g. for Song of Sustenance).
Derision: (realityincarnate): Undying armor by setting RGB to 255 255 255 fixed.
Derision: (realityincarnate): Title suffix quest command, Syntax: $client->SetTitleSuffix(title)
Derision: (erde): cleanipc fix for GCC 4.3.2
Derision: (BWstripes): Beastlord pets are now named SoAndSo's Warder.

==4/09/2009==
Derision: Fix for Alchemy, Poison Making and Tinkering.

==4/08/2009==
Derision: Added $client->GetClientVersion(). Returns: 1 (6.2 Client), 2 (Titanium), 3 (SoF)

==4/07/2009==
Derision: Fixed crash in chatserver.
Derision: Fixed possible crash in QuestManager::attacknpc

==4/06/2009==
Derision: (Image): Check packet length is at least 4 bytes in EQStream::ProcessPacket
Derision: (Image): EQStreamFactory::ReaderLoop - Assure that the incoming buffer contains an opcode to analyze.
Derision: (Image): Sanity checks on OP_SessionResponse/OP_SessionStatRequest size in EQStream::ProcessPacket

==4/05/2009==
Derision: GM Training: SoF - Points now update correctly in the Training Window.
Derision: GM Training: Points now update correctly in the Training Window for languages.
Derision: GM Training: The correct amount of money is deducted from the player profile.
Derision: SoF - Mapped findable field in Spawn struct and OP_FindPersonRequest/Reply.
Derision: SoF - Duelling now works.